changed background color of fixed top menu to an image to fix iOS7 layout issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -115,7 +115,7 @@
 		position: fixed;
 		top: 0;
 		border-bottom: solid #666666 1px;
-		background-color: #ffffff;
+		background: transparent url('../img/white.png');
 		z-index: 999;
 	}
 
